fix: z-index bug

--- a/app/less/AttachButton.less
+++ b/app/less/AttachButton.less
@@ -1,11 +1,12 @@
 .AttachButton{
     position: relative;
+    z-index: 101;
 }
 .AttachButton-menu{
     position: absolute;
     top: 49px;
     right: -9px;
-    z-index: 99;
+    z-index: 101;
 }
 .AttachButton-menu-item{
     cursor: pointer;
