--- a/app/less/Layout.less
+++ b/app/less/Layout.less
@@ -29,7 +29,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 9;
+    z-index: 22;
     top: 0;
     left: 0;
     overflow: hidden;
