--- a/app/less/MessageContainer.less
+++ b/app/less/MessageContainer.less
@@ -2,6 +2,7 @@
     height: calc(100% - 359px);
     // height: calc(100% - 121px);
     position: relative;
+    z-index: 10;
     width: 100%;
     transition: all 0.25s ease-in-out;
 }
